Multiple changes: - Add sdk to help with native code execution in remote JARs. Far from complete, needs more mappings. - JarLoader now reads the remote JAR manifest to determine which payload class to execute. - Added 3 sample payloads: list system properties, list directories from root using native direent API and a dumper of class files from Java VM. - JAR loader now includes a generic SockerListener class which can be used for any network communication between remote JAR and the PC. Class dumper payload uses it for example to send back the class files. - IntelliJ project converted to explicit IMLs for better or worse (this method is considered deprecated). But it allows better classpath control when project is refreshed from Maven. - Versions are split between JAR loader and the rest of the project. This allows to release new SDK versions without needing to re-burn the loader. - JAR loader version is now displayed on PS5. - Made changes to make it possible to run remote JARs on a local development machine for testing. For example, class dumper can work just as well to dump local JVM classpath. - RemoteLogger no longer crashes attempting to send a UDP packet that is too large.